@@ -6,19 +6,11 @@ AUX urbackup-server-2.0.38-gcc-fortify.patch 775 SHA256 bfb8851a055afb2ca0e6bc45
 AUX urbackup-server-2.0.38-gentoo-prefix.patch 609 SHA256 80e102b0f371d92ec0f7088660763cb5dcd8093d193b0dcfb984ce4580064d9e SHA512 d3433dd2ed30c046c4784c7f7edebcbd0a020bfde4362c1b91f5f46496758b0e517d67d22412e68a53ea986197407f8aae24b9e490ac2c86cfd2846b212d20dc WHIRLPOOL e76aebac3bf45e4b47bfaac93f0605324adef5357e4aecf73f2f085bc24b46b78fa025fb31deef4b6b40bd96f3f308504eef0e2528518a6ebda5a493648a2062
 AUX urbackup-server-2.0.38-manpage.patch 1276 SHA256 f3291b8519c355bf59d1d8d69112b220db9619e6ebeb888675d0372d386cdeae SHA512 3689c91a01af9518cca908bc3fc9b89d12a057b4d71d86dae4ad16e820c5ab6e3f75232b8a5d3f284917522038ab396cf89681c3dfd7f9ea4c7a8520186d096e WHIRLPOOL e34b2994ef75d8b2416aeee643e5ec4e5f0478245220d92cb1574f8a7db3ca9c76533c1f2e96fac87f8e3b60178e2957986e45b353a7e1decf7588ff41b27dc5
 AUX urbackup-server-2.0.38-redundant-binary.patch 934 SHA256 02b1242ef22537f5d1734e266b786ec00d721487c3000c91dc53b710bd6c8054 SHA512 6b962cee5a20853d3390cac5be373990e38519fe899032d5ec21e78f091c5fe2e9a9ce710963e8a040e397164edcf87355c402a418304f8501f5ded407c64b48 WHIRLPOOL af8c9b5e2a7a51779d3a105542d947d73dde9599fd0b5d02023ec9be119f9c69ae00611b1b5df09d4ca2a80978997b0a56b43d4bdd118bd30da641e4e1657564
-AUX urbackup-server-2.1.7-autoupdate-code.patch 6856 SHA256 bbc22eed018d56c2a3ebd95d17fa45bd419913f69f2c03de41a6c2a6f1709cf6 SHA512 d7a33e8ae0d2e03f2c70551f2e1502ab98984560f02096c3c08d182bc672dbfa24f89e4da268224d019cf4849b016ab656f6f8e8587b7e2189652a80f5b90ea4 WHIRLPOOL 6689001295499194ca99ce86c91ef5ec98742bea6e4c18da4840ad139d8bf9e0b04d17fe0cd6b050e07ffbad868a8a3d47ffb7496145926cc4401921ae46e5d2
-AUX urbackup-server-2.1.7-autoupdate-config.patch 2494 SHA256 2d50eb68be971c17749914c582bdaf39973331680e2454d21d2ef9df0d2f5b18 SHA512 774bf8348971fcfbf379a4b5687c33c9ad8e7deda9cc951152c66a3db9453a14c88ea26efe4dd6fa73ef18473a75d58f9b4aa98e1d5608cf929f49099bf272aa WHIRLPOOL 5d0ab8bd818188313a33a511c7f3ec552dedf00570833601396233eba7a2faae637746e1bd74b21b620d2830417864221afea8e3249f8e520a0d8fb796e0cb0a
-AUX urbackup-server-2.1.7-autoupdate-datafiles.patch 3487 SHA256 695e923d28e1f152c8cf8a0dfb753ebbde18a0b21c131ea34e7fd2cad1e89284 SHA512 6df819caced8909e94bdd0f861a7b1ab949f98c0daaa224888c0e7b3ad59c7e2863069ff06b71279737a7c89ef996e8e8c4e59ca1f8017c1b55cf00ca13d954d WHIRLPOOL bc6180faf6f69cd21b61a6d45336427a04ecd84d2ec1434559f509fc1631b6e148c9e26e3f501f1e40ee4fea992cd39f49bcf2f224b5548ca7e0edb4e1d90cfe
-AUX urbackup-server-2.1.7-autoupdate-ui.patch 116241 SHA256 488a679bcec6bb4ab885065e90743504756b9f8ef2e869a11d2ee53e720370ca SHA512 23d9bfca5ea0a1d53404de65c9b27530939bc2c47e436d70f2aa088663e6768f7dc4ea9a446d9f99432c683f76854028397b52ed776543f34023c90a218e7073 WHIRLPOOL ce3033a86299d4b3f8bde298423c28792a36cd5e6b15ff290082a64b62ef07caa85a28cbc6c8f9fc6f7f5b1563351a58fa81af604cc54ab787cae5c61a3a6575
-AUX urbackup-server-2.1.7-gcc-fortify.patch 777 SHA256 044c63f34d07b169c4c17e273f73d477db6d007767261a2818b217c75f13db6c SHA512 9916ff126ecd872e00bdaee1e095e14bd0e85ddbbe2f40eff5fa587495d28fc8faf51193e78561cd06eb0cfab6fd0dfcdb83531e331ff7ddb052038bad01f834 WHIRLPOOL 5b95187b8d77778a252add33746da8addf9820438120b95a9528c7edefb9f90b3a7164a55152baaed72b7eb89d41b291871f99e879accb2612eeae32c33f2658
-AUX urbackup-server-2.1.7-gentoo-prefix.patch 611 SHA256 873975161ff59288c510220a39d84c64768f539ac3986fad777d0fd28a72f330 SHA512 27375d8fe01c8193b0de454ba58a0ddbe1d232d01031dbb30f30ad4cdbd45add64ba924d9e71d85602f4b0878b199856d896fa0e9f6d209bb84b232893796364 WHIRLPOOL 5346557896933507dc4f70694ae4b98ccf0952173e8810cd4ce4edb60fd9b23433282101980adba8330e0d03a91ae82bb47684589a58cf8985b9f8d631844c3d
-AUX urbackup-server-2.1.7-manpage.patch 1282 SHA256 4f431c82151c9b5c61c7c9f0342730844766e67e70e586c53db812aba8548e1d SHA512 53fe444f70e1e0b671d2b202cd3cf6d2597f1e38296bd1ace969803118511ef5b8462c934b0dc4ae9cbe231d1793fb087fbe4c7dd9760799bf9444b318838cba WHIRLPOOL feb8d8507c6a35d0bc36823766e4d45bc702658224bc4e87fe1f64928824556e39917164b08cd30f94ba7b1e67195c7509303a8683427114a1bd1e64923092b0
+AUX urbackup-server.service 243 SHA256 08f72a0d07c805b6b88611e5037923ea209b667e020c1861cce5e77ca3cc5216 SHA512 c511f403addf426bc30782e180fbf1e346d98c84aa5f2573eb3853f1c15451fe2278b9566aefc5c54caa97e1b2e76a28d794594c921fbd568d66699e2a61dc64 WHIRLPOOL bb17606b34e707d1ee494bb06110bc4bb390016009c232165e6ac89d032f22c6d70a534bdeb56cd85ed83f6cea5312609d0dd590e4bc1640da2b9702ea8a8975
 AUX urbackupsrv 270 SHA256 28f3cb16d26b3a15b92a3877a201b0e88ba4ed82f79eb4c389d0728f43291ad0 SHA512 407840c60e5ed7f1414e42805a1468bae215e82951faa7272cf6f379792ee5316a309975bb424615b7381a2ef19729f49ff340035a2b468021d1743e52b35d7f WHIRLPOOL 354a125e4a20320f89504e341ea7cc3abadaa5b1374e43145277cb0cac073b87a30f078b25e5e217482b1dbaa4b68cd0e0b4b435b7fccc96876340a250193d60
 DIST urbackup-server-2.0.38.tar.gz 4263888 SHA256 2d63077c3bb3bb38dfdd4935a0e053ec9540246a4e44ff193663d9339fd11ae3 SHA512 886d0e01b5af46ce773c0b4991d2efd739f2b5f4c4993f6b959ef06eda26a718638e86ef3a8bd9a5202585b93e6481b7dd69cd11c07863aa868aebfafce7bf59 WHIRLPOOL d0bf352968f5e127550384c4e3a939ed26924dbb3190f1429a193777784c707bedaedb29be935740f92a1681d500ab75d017f690ad406730efe64454dcbb57b7
-DIST urbackup-server-2.1.7.tar.gz 4440792 SHA256 187c430d21a906fe6e3e679c58545fdff93042e439665a034b94344065735a30 SHA512 1d6fb563b6ab7a70884df40fb41759c6d02ad605b4feb0c9f64400f0d1a2f5055f159b4bba2fe00bb4a68c67e4ed87cda44124387da2ac556470fcd042f8a003 WHIRLPOOL dc4e92901711bc6a1eec334304a196ebbb13c71ab038a3376bc73b5d1fc126af888f18cf24fa625f023e560db7681aac62117dc7f49abd5529f7f794f0f3a113
-EBUILD urbackup-server-2.0.38.ebuild 1509 SHA256 2d9519d0b664198106e2b31081bbf0f73c82e573d174e5a4427cbfcfc13e41e4 SHA512 dffea22dda50ddf051276958c5bf831a450a5fbc543b2c1d17de8f3344ffa02bf8d8ca228c60f5eff8ff4b6c8b86da7023cf5ea0b4e41fb59c73a188788ec074 WHIRLPOOL 8a3940facf4251ae22c3438a04ffb8b9fde7af38e6179b2cd910645c2dcc043a9a7835eddf9251593f6212a58b072a6d3ec7173f39955658bc830217fffcfe27
-EBUILD urbackup-server-2.1.7.ebuild 1514 SHA256 30c92af71060c7d8fa75e9c1ed8a7cdbfd80b72c12aa4ee10eda07c8ca138454 SHA512 0c4ee8a790637988ac08ee89d6f9d2cc372c16545d29b44888608b3750e87d4f23310fb34ce5c323a7d6d9516032afbf583faaca47784515d6d211d2b9720405 WHIRLPOOL 6bcd7612357d8d05599e8d7fd772114be272fbe4982f558bfb6366970fbbfa63b9dbc11bb822ad46fd15ff77845af47b660b00f3cef762418bce4095b8475fc2
-MISC ChangeLog 1966 SHA256 03386412287cfe0eb6bf74e52b87b1df9f6bb4f1eb2c79df84c2d2e4edae71f8 SHA512 7c43e018757ee3420cdf7384ed0e69a5710db2e4c43af531e795f0deb0caa99b738f83d00ed6b7bd846d326cf3ed8c1fc23b5fd2fadaf588494546c5548a39ac WHIRLPOOL 50d1a6e0dd8b8b7c595748793bffeaa068ecdab72453c77147de90e85e987b1564266c327ff7b296279c7c9fc8a95f2a967150da501f7fe8f2a60b406c273739
+EBUILD urbackup-server-2.0.38.ebuild 1569 SHA256 5dad4dc5c2dc42a546035e0ac69b566baea9f88b3dff9caa2ddee9a14f9f6a38 SHA512 32b632445bae5a6bbd94fd2743a93ec223247efe12a5547d139e504f5363f38ff8a2a851bcd857d5e7aaf3be9fde4227fe7f107511dbdde64c878fe9204a1ef3 WHIRLPOOL 7f781c791b297752d5d42f4757ee812545370e5f1a314d2dd55db820e2ba36af47fafb5280a2063643018ab84120915043fa77368480060c3cd9f4351fc930ba
+MISC ChangeLog 2004 SHA256 f7d88928bdb5572f96f83d4b2b05eeb51287da0c29b6230a6d55d31273c96d70 SHA512 d3a3e5dfc46ffa576b32a61c1cf783c7f1999221155b416e4549c0db6931e6a10c55db55a9874afb724c99a311600e21695f511d0143a242b88fe4b1204e38c8 WHIRLPOOL 96c436223ff4d5a659368142af594aee0c4efa81fd3b31b5923241195f0def0258f8f64097a7a5a7c66ced8931ec3f406783a82c89657a5a0f7f498ad2ee012a
 MISC LICENSE 34520 SHA256 76a97c878c9c7a8321bb395c2b44d3fe2f8d81314d219b20138ed0e2dddd5182 SHA512 3a02a6ec14e9d076b79aea8301eab31053c6600b68dcfa6261e10edaa7296a87c8767e35f2411d234b90111fcaf6b4a55c49aa2790a1a0d015213218bb7549fc WHIRLPOOL cdba1c22f8229b169b91c1c72c8c162a7f59c5bb844b6df22e95a1c266c0855741227649012f5201e93ce1b0102d441700a701bae51b29d422a912f2aa17a7aa
 MISC README.md 526 SHA256 c4015dadcd3c066697b2ec9b6a673a1614cbfabe45bbc18463d361756b03f5f5 SHA512 74d29265c740b6f07fdce55ae1d3f0e6ba93e2d22dcf93bdc0f7a64568b17062da220e8a150d2b4df2d7dc8990f5e3859f58825673856d651f9a0bdaf0129dba WHIRLPOOL 8db5806a1db13bf940c65f8cb4f6b5b7cb2817ff91485c73722bc83c0a26bf80108c77ddf6e973594830ebb7b5b23e89927337c5a194fca12a8de4b1298a42ea
 MISC TODO 8 SHA256 41920b348e0c6ff2ef9b7e3ee9308726aa5250fa717883e073ff6a936a9325a4 SHA512 1e8df8094e2118a667384c50453034ce75d0c839a60383580243d2be51ec46f05cff5e81b16aa579e545cfbd5f50e663e23d3eef9623f0691b913c99c1953b58 WHIRLPOOL 0312ba98877c242ca91dfc112b40314de8fa66324e69ba7bac1b7179a7c5528b8e905081b824c73542036b565f65ce99d2d100cebcb7709f7ee1ac94a62aa1d6
