@@ -2,6 +2,13 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2006/02/22 02:08:04 hd_brummy Exp $
 
+  28 Dec 2016; HomerSlated urbackup-server-2.0.38.ebuild,
+  +files/urbackup-server.service:
+
+
+  Added systemd service
+
+
 *urbackup-server-2.1.7 (14 Dec 2016)
 
   14 Dec 2016; HomerSlated urbackup-server-2.0.38.ebuild,
